# Game-Engine

./: .gitignore  README.md  install.sh
defaults/default_shaders/fragments/: clip_model_texture.frag  default_color.frag  default_texture.frag
defaults/default_shaders/xyz/: clip_model_color.vert  clip_model_texture.vert  default_color.vert  default_texture.vert  mvp_color.vert  mvp_texture.vert
defaults/default_shaders/xyzw/: clip_model_color.vert  clip_model_texture.vert  default_color.vert  default_texture.vert  mvp_color.vert  mvp_texture.vert
events/: event.h
exemples/camera/: CMakeLists.txt  main.cpp
exemples/cubes/: CMakeLists.txt  main.cpp
exemples/light/: CMakeLists.txt  main.cpp
exemples/light/light-source/: light_source.cpp  light_source.h
exemples/light/shaders/: fragment.glsl
exemples/light/shaders/light_source/: vertex.glsl
exemples/light/shaders/objects/: vertex.glsl
exemples/light/shaders/surface/: vertex.glsl
exemples/solar_system/: CMakeLists.txt  main.cpp
exemples/solar_system/shaders/: fragment.glsl  vertex.glsl
exemples/terrain/: main.cpp
exemples/utah/: CMakeLists.txt  main.cpp
exemples/utah/event_handler/: handler.cpp  handler.h
exemples/utah/shaders/: vertex.glsl
exemples/utah/tools/: tools.cpp  tools.h
exemples/window/: CMakeLists.txt  main.cpp
files/: files.cpp
graphics/: graphics.h  macros.h  settings.h
graphics/blender/: blender.cpp  blender.h
graphics/buffers/: buffers.h
graphics/camera/: camera.cpp  camera.h
graphics/mesh/: mesh.cpp  mesh.h
graphics/program/: program.cpp  program.h
graphics/renderer/: renderer.cpp
graphics/shaders/: shaders.cpp  shaders.h
graphics/surface/: surface.h
graphics/texture/: texture.cpp
graphics/transformations/: transformations.cpp
graphics/window/: window.cpp
include/GameEngine/: string_utils.h
include/GameEngine/Events/: event.h  events.h
include/GameEngine/Graphics/: blender.h  buffers.h  camera.h  graphics.h  macros.h  mesh.h  model.h  program.h  renderer.h  shaders.h  surface.h  texture.h  transformations.h  window.h
src/cpu-math/: math.cpp
src/events/: events.h
src/exceptions/: exceptions.cpp  exceptions.h
src/files/: files.h
src/graphics/: macros.h
src/graphics/buffers/: buffers.cpp  buffers.h
src/graphics/mesh/: mesh.h
src/graphics/model/: model.cpp  model.h
src/graphics/program/: program.cpp
src/graphics/renderer/: renderer.h
src/graphics/shaders/: shaders.cpp  shaders.h
src/graphics/surface/: surface.cpp
src/graphics/texture/: texture.cpp
src/graphics/transformations/: transformations.cpp
src/graphics/window/: window.cpp  window.h
string-utils/: string_utils.cpp
